# demo

./: .gitignore  CHANGELOG.md  CITATION.cff  DEMO_SPEC.md  LICENSE  Makefile  README.md  aacte.architecture.json  pyproject.toml  requirements.txt  run_demo.py  verify_demo.py
.github/workflows/: release.yml  verify.yml
aacte/: __init__.py  actions.py  engine.py  geometry.py  models.py  simulator.py
access/: __init__.py  cli.py  web.py
docs/: ACCESS.md  ECOSYSTEM.md  PROCUREMENT.md  SDK_INTEGRATION.md  SUBMISSION.md
outputs/: safe_hold_trace.json  unsafe_merge_trace.json
scenarios/: safe_hold.json  unsafe_merge.json
stegdb_hooks/: README.md  emit_status.py  last_status.json
