[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aacte"
version = "0.1.0"
description = "Admissibility at Commit-Time Engine — minimal demo of commit-time safety enforcement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "aviation",
    "safety",
    "gcat",
    "bcat",
    "commit-time",
    "admissibility",
    "simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/AaCT-E/demo"
Documentation = "https://github.com/AaCT-E/demo/blob/main/README.md"
Repository = "https://github.com/AaCT-E/demo"
"Issues" = "https://github.com/AaCT-E/demo/issues"

[tool.hatch.build.targets.wheel]
packages = ["aacte"]
